Update refresh data and saved into memory(file summuries.json

--- a/news.html
+++ b/news.html
@@ -109,6 +109,7 @@
       </div>
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    <!-- Add version to force reload after updates -->
+    <script type="module" src="js/main.js?v=3.0"></script>
   </body>
 </html>
