--- a/news.html
+++ b/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,8 @@
         <div class="header-content">
           <h1><i class="fas fa-newspaper"></i> Tech News Summary</h1>
           <p class="subtitle">
-            Bản tóm tắt tin tức công nghệ từ Techmeme - Cập nhật mới nhất
+            <!-- The summaries of latest technology news from Techmeme -->
+            The summaries of latest technology news from Techmeme
           </p>
           <div class="stats">
             <span class="stat-item">
@@ -29,7 +30,7 @@
             </span>
             <span class="stat-item">
               <i class="fas fa-list"></i>
-              <span id="total-items">0 bài viết</span>
+              <span id="total-items">0 Articles</span>
             </span>
           </div>
         </div>
@@ -40,7 +41,7 @@
         <button
           id="refresh-btn"
           class="floating-refresh-btn"
-          title="Tải lại dữ liệu mới"
+          title="Refresh data"
         >
           <div class="refresh-icon-wrapper">
             <i class="fas fa-sync-alt refresh-icon"></i>
@@ -53,23 +54,19 @@
       <main class="main-content">
         <div class="filter-bar">
           <div class="filter-group">
-            <label for="type-filter">Loại tin:</label>
+            <label for="type-filter">Type:</label>
             <select id="type-filter">
-              <option value="">Tất cả</option>
-              <option value="news">Tin tức</option>
-              <option value="announcement">Thông báo</option>
+              <option value="">All</option>
+              <option value="news">News</option>
+              <option value="announcement">Announcement</option>
               <option value="video">Video</option>
-              <option value="howto">Hướng dẫn</option>
-              <option value="troubleshooting">Khắc phục sự cố</option>
+              <option value="howto">How-to</option>
+              <option value="troubleshooting">Troubleshooting</option>
             </select>
           </div>
           <div class="search-group">
             <i class="fas fa-search"></i>
-            <input
-              type="text"
-              id="search-input"
-              placeholder="Tìm kiếm tin tức..."
-            />
+            <input type="text" id="search-input" placeholder="Search news..." />
           </div>
         </div>
 
@@ -79,19 +76,19 @@
 
         <div id="loading" class="loading" style="display: none">
           <i class="fas fa-spinner fa-spin"></i>
-          <span>Đang tải...</span>
+          <span>Loading...</span>
         </div>
 
         <div id="no-results" class="no-results" style="display: none">
           <i class="fas fa-search"></i>
-          <h3>Không tìm thấy kết quả</h3>
-          <p>Thử thay đổi từ khóa tìm kiếm hoặc bộ lọc</p>
+          <h3>No results found</h3>
+          <p>Try changing the search keyword or filter</p>
         </div>
       </main>
 
       <footer class="footer">
         <p>
-          &copy; 2025 Tech News Summary. Dữ liệu từ
+          &copy; 2025 Tech News Summary. Data from
           <a href="https://www.techmeme.com" target="_blank">Techmeme</a>
         </p>
       </footer>
@@ -101,8 +98,8 @@
     <div id="loading-overlay" class="loading-overlay">
       <div class="loading-content">
         <div class="loading-spinner"></div>
-        <div class="loading-text">Đang cập nhật dữ liệu</div>
-        <div class="loading-subtext">Vui lòng đợi trong giây lát...</div>
+        <div class="loading-text">Loading data</div>
+        <div class="loading-subtext">Wait a minutes, please...</div>
         <div class="loading-progress">
           <div class="loading-progress-bar"></div>
         </div>
@@ -110,6 +107,6 @@
     </div>
 
     <!-- Add version to force reload after updates -->
-    <script type="module" src="js/main.js?v=3.0"></script>
+    <script type="module" src="js/main.js?v=4.0"></script>
   </body>
 </html>
